<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/AboutBackground">
	<LinearLayout style="@style/AboutLayout">
		<TextView
			style="@style/AboutHeading"
			android:text="@string/profiles"
			/>
		<TextView 
			style="@style/AboutContent"
			android:text="@string/about_two_one"
			/>
		<ImageView 
			android:layout_height="180dip" 
			android:layout_width="wrap_content" 
			android:src="@drawable/about_screen2" 
			android:paddingLeft="20dip" 
			android:paddingRight="20dip"></ImageView>
		<TextView
			style="@style/AboutContent"
			android:text="@string/about_two_two"
			/>
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:layout_weight="1" >
				<Button
					style="@style/AboutButton"
					android:text="@string/back"
					android:id="@+id/btnBack" />
			</LinearLayout>
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:layout_weight="1" >
				<Button
					style="@style/AboutButton"
					android:text="@string/finish"
					android:id="@+id/btnFinish" />
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</ScrollView>